<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/titleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_margin="8dp" />

    <EditText
        android:id="@+id/first_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_edit"
        android:layout_margin="8dp" />

    <EditText
        android:id="@+id/second_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_edit"
        android:layout_margin="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/add" />
    </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>